add page nosotros

--- a/assets/pages/nosotros.html
+++ b/assets/pages/nosotros.html
@@ -9,7 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/styles/style.css"/>
+    <link rel="stylesheet" href="/assets/styles/style.css" />
     <title>Liadarkla</title>
   </head>
   <body>
@@ -56,12 +56,14 @@
                   aria-current="page"
                   href="/index.html"
                   >Lia Candles
-                  <img src="/assets/images/velas-de-spa.png" class="ico_logo"
+                  <img
+                    src="/assets/images/brand/velas-de-spa.png"
+                    class="ico_logo"
                 /></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-2" href="/assets/pages/servicios.html"
-                  >Servicios</a
+                <a class="nav-link mx-2" href="/assets/pages/productos.html"
+                  >Productos</a
                 >
               </li>
               <li class="nav-item d-none d-lg-block">
@@ -83,8 +85,8 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-2" href="/assets/pages/contacto.html"
-                  >Contacto</a
+                <a class="nav-link mx-2" href="/assets/pages/carrito.html"
+                  >Carrito</a
                 >
               </li>
               <li class="nav-item dropdown">
@@ -116,38 +118,60 @@
     </header>
 
     <main>
-      <section class="text-center container">
-        <h1 class="title">Nosotros</h1>
-        <p class="mt-5">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis
-          quidem voluptate saepe nihil, suscipit magnam expedita vel perferendis
-          reiciendis vitae itaque enim non sunt maxime, quia accusamus quae
-          laudantium ut! Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Perspiciatis, error. Distinctio voluptas alias tempore,
-          assumenda, dolorem quam reprehenderit ipsam quis quisquam tempora
-          cumque facilis sequi a repellendus, incidunt inventore nam! Lorem
-          ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quod,
-          perspiciatis vitae doloremque nesciunt quas, dolore dignissimos ut
-          temporibus odio velit culpa dolor magni a numquam iste? Corporis,
-          quibusdam fugiat?
-        </p>
-      </section>
-      <section class="row container">
-        <article class="mt-5 col-6">
-            <ul>
-                <li class="p-2"><img src="https://this-person-does-not-exist.com/img/avatar-gen48ec9dfbc4d283e76a95c1bd782a9ecd.jpg" alt="" class="pic no-border">&nbsp;&nbsp;&nbsp;&nbsp;Alfredo García - <strong>Fotógrafo</strong></li>
-                <li class="p-2"> <img src="https://this-person-does-not-exist.com/img/avatar-gen1107dbfe77ba7b7d1b45224096a34858.jpg" alt="" class="pic no-border">&nbsp;&nbsp;&nbsp;&nbsp;Pablo García - <strong>Fotógrafo</strong></li>
-                <li class="p-2"> <img src="https://this-person-does-not-exist.com/img/avatar-gen116010fcf8930217c665c0006b1128e2.jpg" alt="" class="pic no-border">&nbsp;&nbsp;&nbsp;&nbsp;Gustabo García - <strong>Fotógrafo</strong></li>
-            </ul>
+      <div class="container">
+        <h1 class="text-center mb-5 title">Nosotros</h1>
+        <article class="text-center m-5">
+          Bienvenidos a Lia Clandles, un santuario para aquellos que buscan
+          iluminar su camino con la magia de las velas y la espiritualidad.
+          Nuestra empresa nació de la pasión por las antiguas artes esotéricas y
+          la creencia de que cada vela encierra un poder místico capaz de
+          transformar espacios y elevar el espíritu.
         </article>
-        <article class="mt-5 col-6">
-            <ol>
-                <li><strong>Certificaciones:</strong> Obtener certificaciones de asociaciones de fotografía reconocidas, como la Asociación de Fotógrafos Profesionales: URL Asociación de Fotógrafos Profesionales, puede demostrar la experiencia y el profesionalismo de la empresa.</li>
-                <li><strong>Testimonios Positivos de Clientes:</strong> Los comentarios positivos de los clientes satisfechos son una prueba del buen trabajo de la empresa y pueden ayudar a generar confianza en nuevos clientes potenciales.</li>
-                <li><strong>Gran Presencia en Redes Sociales:</strong> Tener una gran cantidad de seguidores en redes sociales y un alto nivel de interacción con su público demuestra la popularidad de la empresa y su capacidad para conectar con los clientes.</li>
-            </ol>
-        </article>
-      </section>
+        <div class="row">
+          <span class="col-md-6 mb-3">
+            En Lia Clandles, nos enorgullecemos de crear velas artesanales de la
+            más alta calidad, infundidas con ingredientes naturales
+            cuidadosamente seleccionados y cargadas con intenciones poderosas.
+            Cada una de nuestras creaciones es única, diseñada para despertar
+            los sentidos y transportarte a un mundo de armonía y equilibrio.
+            <br>
+            Nuestro equipo está formado por artesanos apasionados y expertos en
+            las tradiciones esotéricas, quienes dedican su tiempo y esfuerzo a
+            explorar los misterios del universo y a canalizar esa energía en
+            cada vela que creamos. Desde la selección de los aceites esenciales
+            hasta la mezcla de hierbas y cristales, cada paso del proceso se
+            realiza con suma dedicación y respeto por las antiguas enseñanzas.
+          </span>
+          <span class="col-md-6">
+            <img
+              src="/assets/images/brand/nosotros-1.webp"
+              style="width: 100%"
+            />
+          </span>
+        </div>
+        <div class="row my-3">
+          <span class="col-md-6 mb-3">
+            En Lia Clandles, creemos que la iluminación no solo proviene de la
+            luz física, sino también de la conexión con el mundo espiritual.
+            <br>
+            Es por eso que ofrecemos una amplia gama de productos esotéricos, desde
+            inciensos y sahumerios hasta piedras curativas y amuletos
+            protectores, todo diseñado para elevar tu vibración y abrirte a
+            nuevas dimensiones de conciencia. Nos enorgullece ser una empresa
+            comprometida con la sostenibilidad y el respeto por la naturaleza.
+            <br>
+            Utilizamos ingredientes orgánicos y procesos respetuosos con el
+            medio ambiente, asegurándonos de que nuestras creaciones no solo
+            sean mágicas, sino también eco-amigables.
+          </span>
+          <span class="col-md-6">
+            <img
+              src="/assets/images/brand/nosotros-2.webp"
+              style="width: 100%"
+            />
+          </span>
+        </div>
+      </div>
     </main>
 
     <div class="my-5">
@@ -167,7 +191,7 @@
                 <h6 class="text-uppercase mb-4 font-weight-bold">
                   Lia Candles
                 </h6>
-                <p>Más que un estido de fotografía, un estudio que da vida.</p>
+                <p>Únete a nosotros en este viaje místico y descubre el poder transformador de las velas y los productos esotéricos de Lia Clandles.❤️</p>
               </div>
               <!-- Grid column -->
 
@@ -192,7 +216,6 @@
               <!-- Grid column -->
 
               <hr class="w-100 clearfix d-md-none" />
-
 
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
@@ -225,7 +248,7 @@
                   class="text-white"
                   role="button"
                   ><img
-                    src="/assets/images/facebook.png"
+                    src="/assets/images/social/facebook.png"
                     alt=""
                     class="ico-footer no-border"
                 /></a>
@@ -236,7 +259,7 @@
                   class="text-white"
                   role="button"
                   ><img
-                    src="/assets/images/gorjeo.png"
+                    src="/assets/images/social/gorjeo.png"
                     alt=""
                     class="ico-footer no-border"
                   />
@@ -247,7 +270,7 @@
                   class="text-white"
                   role="button"
                   ><img
-                    src="/assets/images/instagram.png"
+                    src="/assets/images/social/instagram.png"
                     alt=""
                     class="ico-footer no-border"
                 /></a>
@@ -263,5 +286,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
