--- a/assets/pages/productos.html
+++ b/assets/pages/productos.html
@@ -505,7 +505,7 @@
                 <h6 class="text-uppercase mb-4 font-weight-bold">
                   Lia Candles
                 </h6>
-                <p>Más que un estido de fotografía, un estudio que da vida.</p>
+                <p>Únete a nosotros en este viaje místico y descubre el poder transformador de las velas y los productos esotéricos de Lia Clandles.❤️</p>
               </div>
               <!-- Grid column -->
 
