--- a/index.html
+++ b/index.html
@@ -392,7 +392,6 @@
       </section>
     </main>
 
-    <!-- Remove the container if you want to extend the Footer to full width. -->
     <div class="my-5">
       <!-- Footer -->
       <footer
@@ -410,7 +409,7 @@
                 <h6 class="text-uppercase mb-4 font-weight-bold">
                   Lia Candles
                 </h6>
-                <p>Más que un estido de fotografía, un estudio que da vida.</p>
+                <p>Únete a nosotros en este viaje místico y descubre el poder transformador de las velas y los productos esotéricos de Lia Clandles.❤️</p>
               </div>
               <!-- Grid column -->
 
