--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <h6 class="text-uppercase mb-4 font-weight-bold">
                   Lia Candles
                 </h6>
-                <p>Únete a nosotros en este viaje místico y descubre el poder transformador de las velas y los productos esotéricos de Lia Clandles.❤️</p>
+                <p>Únete a nosotros en este viaje místico y descubre el poder transformador de las velas y los productos esotéricos de Lia Candles.❤️</p>
               </div>
               <!-- Grid column -->
 
