--- a/assets/pages/productos.html
+++ b/assets/pages/productos.html
@@ -109,6 +109,11 @@
                       >Nosotros</a
                     >
                   </li>
+                  <li>
+                    <a class="dropdown-item" href="/assets/pages/contacto.html"
+                      >Contacto</a
+                    >
+                  </li>
                 </ul>
               </li>
             </ul>
