--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
                       >Nosotros</a
                     >
                   </li>
+                  <li>
+                    <a class="dropdown-item" href="/assets/pages/contacto.html"
+                      >Contacto</a
+                    >
+                  </li>
                 </ul>
               </li>
             </ul>
